# trustedpython

./: .env  .env.example  .gitignore  .mcp.json  AGENTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  PRE_GITHUB_SUMMARY.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_FIX_PLAN.md  PRODUCTION_READINESS.md  QUICKSTART.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_FIXES.md  SETUP.md  TESTING.md  TEST_ANALYSIS.md  TEST_SUITE_SUMMARY.md  alembic.ini  claudesessions.md  clean_and_test.py  docker-compose.yml  main.py  opencode.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup_db.py  start.sh  test_enums.py  test_results.txt
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  db.py  exceptions.py  main.py
docs/: 00-README.md  01-System-Overview.md  02-Architecture-Design.md  API_QUICK_REFERENCE_AUTH.md  HomeFeedImplementation.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY_AUTH.md  WEBSOCKET_INFRASTRUCTURE.md  api_access_for_flutter.md  deployment.md  development_setup.md  flutter_integration.md  notifications_api_reference.md  notifications_implementation_summary.md  notifications_integration_guide.md  sell_flow_implementation.md
frontend/: package-lock.json  package.json
milestones/: phase-1-foundation.md  phase-2-authentication.md  phase-3-listings-categories.md  phase-4-browse-seller-apis-summary.md
scripts/: add_is_popular.py  check_alembic.py  check_tables.py  clear_test_data.py  fix_alembic.py  fix_migrations.py  fix_test_db.py  migrate_db.py  reset_database.py  reset_test_db.py  verify_auth_imports.py  verify_home_feed.py  verify_schema.py
tests/: README.md  __init__.py  conftest.py  conftest_old.py  test_auth.py  test_buy_flow.py  test_categories.py  test_health.py  test_home_feed.py  test_listings.py  test_main.py
versions/: 20260320_2012_fd7c7148447b_initial_migration_users_table.py  20260320_2027_fe4b4f265d94_add_categories_listings_and_listing_.py  20260320_2239_c3c3f104fb73_add_user_profile_fields_deal_status_.py  20260320_2323_44ec30f3a4a6_initial_migration_all_models_with_.py  20260326_1941_a2a0acd07cf7_add_exclusive_cards_model_is_featured_.py
(+260 files in other folders)
